# leafbar

./: CMakeL10n.txt  CMakeLists.txt  README.md
data/: CMakeLists.txt
doc/: CMakeLists.txt
doc/en/: index.docbook
src/: CMakeL10n.txt  CMakeLists.txt  applet.cpp  applet.h  applet_config.cpp  applet_config.h  applet_config_dialog.cpp  applet_config_dialog.h  applet_db.cpp  applet_db.h  applet_panel_extension.cpp  applet_panel_extension.h  applet_selector.cpp  applet_selector.h  application.cpp  application.h  config.ui  kicker_applet.cpp  kicker_applet.h  leafbar.desktop  leafbar.kcfg  leafbar_config.desktop  leafbariface.h  main.cpp  menu.cpp  menu.h  menu_button.cpp  menu_button.h  panel.cpp  panel.h  root_menu.cpp  root_menu.h  settings.kcfgc  settings_menu.cpp  settings_menu.h  tdecm_leafbar.cpp  tdecm_leafbar.h  utils.h  version.h
src/applets/: CMakeL10n.txt  CMakeLists.txt
src/applets/calendar/: CMakeLists.txt  README  calendar.cpp  calendar.desktop  calendar.h
src/applets/pager/: CMakeLists.txt  pager.cpp  pager.desktop  pager.h  pager_cfg.cpp  pager_cfg.h  pager_desktop.cpp  pager_desktop.h
src/applets/systray/: CMakeLists.txt  status_widget.cpp  status_widget.h  system_graph.cpp  system_graph.h  system_tray.cpp  system_tray.desktop  system_tray.h  system_tray_cfg.cpp  system_tray_cfg.h
src/applets/taskman/: CMakeLists.txt  task.cpp  task.h  task_button.cpp  task_button.h  task_container.cpp  task_container.h  task_grouper.cpp  task_grouper.h  task_manager.cpp  task_manager.desktop  task_manager.h  task_manager_cfg.cpp  task_manager_cfg.h
translations/desktop_files/: el.po  leafbar-desktops.pot
translations/desktop_files/leafbar-applets-desktops/: el.po  leafbar-applets-desktops.pot
translations/messages/: el.po  skout.pot
translations/messages/applets/: calendar.pot  systray.pot  taskman.pot
